--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,7 +9,7 @@ steps:
   args:
   - 'apply'
   - '-f'
-  - 'deployment.yaml'
+  - 'flask-deployment.yaml'
   env:
   - 'CLOUDSDK_COMPUTE_ZONE=us-central1'
   - 'CLOUDSDK_CONTAINER_CLUSTER=ica4'
